discussion/kv_engine/173282/173282_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51715: Timeout SeqnoPersistenceRequests when no data is flushed

Prior to this change, a SeqnoPersistenceRequest would wait 'forever'
if no data is moving through the vbucket and never timeout. This is
because execution into the code managing the SeqnoPersistenceRequests
only occurs from a successful flush of an item.

This is addressed in this commit by the addition of a new task which
will run when there are SeqnoPersistenceRequests to expire. This new
task runs for persistent and ephemeral (replacing
EphemeralBucket::NotifyHighPriorityReqTask) and aims to only run when
notifications might need expiring.

The configuration is updated so that 0 is a legal value for
"seqno_persistence_timeout", enabling tests with minimal real run-time.

Change-Id: I603ad4c8f62e496d5d6bea80bc5ef4f196714989

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-08 19:19:49.000000000
Message: 
Uploaded patch set 11: Patch Set 10 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 21:04:29.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45190/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...(12 ms) OK


99% tests passed, 2 tests failed out of 423

Total Test time (real) = 733.22 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45190/ )

Timeout of a CTest test 286/423 Test #185: ep-engine_ep_unit_tests.PersistentAndEphemeral/DcpStreamSyncReplTest ....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45190/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37957/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ephemeral_vb.cc:276:11:
error: member access into incomplete type "KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37957/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16596/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:276:11: error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
    bucket->addVbucketWithSeqnoPersistenceRequest(
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:51:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16596/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ephemeral_vb.cc:276:11:
error: member access into incomplete type "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16596/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18704/ : FAILURE

Timeout of a CTest test [2022-04-08T20:53:23.467Z]  10/443 Test #250: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ...........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18704/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15525/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17464/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18367/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19399/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6245/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26774/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6307/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-04-14 14:59:53.000000000
Message: 
Patch Set 11:

(10 comments)
File Comment: /PATCHSET_LEVEL -> Working on other comments
----------------------------------------------------------------------------------------------------------------------
